fix some broken css

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -164,6 +164,14 @@ blockquote {
 }
 textarea{
   -webkit-app-region: no-drag;
+  -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    -webkit-rtl-ordering: logical;
 }
 textarea:focus-visible {
   outline: none;
